[gd_scene load_steps=3 format=3 uid="uid://cfpy7feu65fyt"]

[ext_resource type="Script" path="res://manager/YesNoPrompt.gd" id="1_v2h6t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lqk12"]
bg_color = Color(0.237539, 0.237539, 0.237539, 1)

[node name="YesNoPrompt" type="PanelContainer"]
process_mode = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_lqk12")
script = ExtResource("1_v2h6t")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="PromptText" type="Label" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "This is a prompt to check whether the user is sure they want to do something"
horizontal_alignment = 1
autowrap_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="YesButton" type="Button" parent="HBoxContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Yes"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="NoButton" type="Button" parent="HBoxContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "No"

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
size_flags_horizontal = 0

[connection signal="pressed" from="HBoxContainer/VBoxContainer/CenterContainer/HBoxContainer/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/CenterContainer/HBoxContainer/NoButton" to="." method="_on_no_button_pressed"]
